[package]
name = "alpaca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "5.0.1"
flate2 = "1.0.30"
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_yaml = "0.9.34"
